@@ -2,44 +2,45 @@ import java.util.*;
 
 class Solution {
     public List<List<Integer>> threeSum(int[] nums) {
+        if (nums == null)
+            return null;
 
-        if (nums == null || nums.length < 3) {
-            return List.of();
-        }
+        List<List<Integer>> result = new ArrayList<>();
 
         Arrays.sort(nums);
 
         int n = nums.length;
 
-        List<List<Integer>> ans = new ArrayList<>();
-
-        for (int i = 0; i < n; i++) {
+        for (int i = 0; i < n - 2; i++) {
             if (i > 0 && nums[i] == nums[i - 1])
                 continue;
+
             int j = i + 1;
             int k = n - 1;
 
             while (j < k) {
                 int sum = nums[i] + nums[j] + nums[k];
-                if (sum == 0) {
-                    ans.add(List.of(nums[i], nums[j], nums[k]));
+
+                if (sum < 0) {
+                    j++;
+                } else if (0 < sum) {
+                    k--;
+                } else {
+                    result.add(Arrays.asList(nums[i], nums[j], nums[k]));
 
                     while (j < k && nums[j] == nums[j + 1])
                         j++;
+
                     while (j < k && nums[k] == nums[k - 1])
                         k--;
 
                     j++;
                     k--;
-                } else if (sum > 0) {
-                    k--;
-                } else {
-                    j++;
                 }
+
             }
         }
-
-        return ans;
+        return result;
     }
 
     public static void main(String[] args) {
